en este apartado se buscan realizar la version 3.0

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <h3>Analista y desarrollador de sistemas de informacion</h3>
                 <p>mas de 4 años de expericia en atencion al cliente</p>
                 <p>manejo de idiomas ingles y español</p>
+                <p>mas de 4 años de expericia en atencion y soporte al usuario en plataformas digitales.</p>
             </div>
             </li>
         </ul>
@@ -118,6 +119,30 @@
             </div>
         </div>
     </div>
+<!-- aqui se desarrollo las habilidades -->
+    <ul class="skills">
+        <li>
+            <h2>Frontend</h2>
+            <p>Conocmiento en: JavaScrip, Html, Css, Java web y Framework como React
+            </p>
+        </li>
+
+        <li>
+            <h2>Backend</h2>
+            <p>Manejo de Bases de Datos relaciones y no relacionales como xampp, MySQL, MongoDB, 
+                servlets como Apache Tomcat, frameworks como Nodejs y c#.Net core
+            </p>
+        </li>
+
+        <li> <h2>Complementos</h2>
+        <p> Aplicacion de ux/ui, trabajo basico en motores de desarrolo de videos juegos como Unity con C#, 
+            redes sociales, trabajo y liderazgo de equipos, conocnomiento y 
+            configuracion de softweare de streaming como OBS y Stream laps, tambien 
+            cuento con conocimientos en plataformas de atencion al usuario como zendesk entre otros
+        </p>
+    </li>
+    </ul>
+</div>
 
 <script src="index.js"></script>
 </body>
