--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <ul class="skills">
         <li>
             <h2>Frontend</h2>
-            <p>Conocmiento en: JavaScrip, Html, Css, Java web y Framework como React
+            <p>Conocmiento en: JavaScrip, Html, CSS, Java web y Framework como React
             </p>
         </li>
 
@@ -136,7 +136,7 @@
 
         <li> <h2>Complementos</h2>
         <p> Aplicacion de ux/ui, trabajo basico en motores de desarrolo de videos juegos como Unity con C#, 
-            redes sociales, trabajo y liderazgo de equipos, conocnomiento y 
+            redes sociales, trabajo y liderazgo de equipos, con conocimientos y 
             configuracion de softweare de streaming como OBS y Stream laps, tambien 
             cuento con conocimientos en plataformas de atencion al usuario como zendesk entre otros
         </p>
